Time: 1 ms (28.06%), Space: 42.4 MB (56.92%) - LeetHub