@@ -1,7 +1,7 @@
 class Solution {
-  public List<Integer> sequentialDigits(int low, int high) {
-    List<Integer> ans = new ArrayList<>();
-    Queue<Integer> q = new ArrayDeque<>(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
+    public List<Integer> sequentialDigits(int low, int high) {
+        List<Integer> ans = new ArrayList<>();
+    Queue<Integer> q = new ArrayDeque<>(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9));
 
     while (!q.isEmpty()) {
       final int num = q.poll();
@@ -15,5 +15,5 @@ class Solution {
     }
 
     return ans;
-  }
+    }
 }
